@startuml
skinparam shadowing false
skinparam linetype ortho
skinparam classIconSize 0
skinparam classAttributeIconSize 0
hide circle

title ER-диаграмма

entity "users" as users {
  * **id** : INTEGER <<PK>>
  --
  * email : TEXT <<UK>>
  * password_hash : TEXT
  name : TEXT
  * role : TEXT
  avatar_url : TEXT
  * is_blocked : INTEGER
  * email_verified : INTEGER
  email_verify_token : TEXT
  email_verify_expires : TEXT
  password_reset_token : TEXT
  password_reset_expires : TEXT
}

entity "reserves" as reserves {
  * **id** : INTEGER <<PK>>
  --
  * name : TEXT
  type : TEXT
  created : TEXT
  status_text : TEXT
  status_date : TEXT
  phone : TEXT
  email : TEXT
  latitude : REAL
  longitude : REAL
  area : REAL
  website : TEXT
  postal_address : TEXT
  description : TEXT
  region : TEXT
  district : TEXT
  * is_published : INTEGER
}

entity "photos" as photos {
  * **id** : INTEGER <<PK>>
  --
  * reserve_id : INTEGER <<FK>>
  * url : TEXT
}

entity "favorites" as favorites {
  * **id** : INTEGER <<PK>>
  --
  * user_id : INTEGER <<FK>>
  * reserve_id : INTEGER <<FK>>
}

entity "reviews" as reviews {
  * **id** : INTEGER <<PK>>
  --
  * reserve_id : INTEGER <<FK>>
  * user_id : INTEGER <<FK>>
  * rating : INTEGER
  * comment : TEXT
  * status : TEXT
  moderated_by : INTEGER <<FK>>
  moderated_at : TEXT
  * created_at : TEXT
  * updated_at : TEXT
}

entity "user_saved_routes" as saved {
  * **id** : INTEGER <<PK>>
  --
  * user_id : INTEGER <<FK>>
  * reserve_id : INTEGER <<FK>>
  * profile : TEXT
  title : TEXT
  * geojson : TEXT
  distance_m : REAL
  duration_s : REAL
  * created_at : TEXT
}

entity "curated_routes" as curated {
  * **id** : INTEGER <<PK>>
  --
  * slug : TEXT <<UK>>
  * title : TEXT
  teaser : TEXT
  * profile : TEXT
  * reserve_ids : TEXT
  * region_label : TEXT
  * description : TEXT
  list_distance : TEXT
  list_duration : TEXT
  distance_m : INTEGER
  duration_s : INTEGER
  * sort_order : INTEGER
  * is_published : INTEGER
  * created_at : TEXT
  * updated_at : TEXT
}

entity "refresh_tokens" as tokens {
  * **id** : INTEGER <<PK>>
  --
  * user_id : INTEGER <<FK>>
  * token : TEXT <<UK>>
  * expires_at : TEXT
  revoked_at : TEXT
  * created_at : TEXT
}

entity "analytics_events" as analytics {
  * **id** : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK>>
  reserve_id : INTEGER <<FK>>
  * event_type : TEXT
  payload : TEXT
  * created_at : TEXT
}

entity "admin_audit_logs" as audit {
  * **id** : INTEGER <<PK>>
  --
  * admin_user_id : INTEGER <<FK>>
  * action : TEXT
  * target_type : TEXT
  target_id : INTEGER
  payload : TEXT
  * created_at : TEXT
}

users ||--o{ favorites : user_id
reserves ||--o{ favorites : reserve_id

users ||--o{ reviews : user_id
reserves ||--o{ reviews : reserve_id
users |o--o{ reviews : moderated_by

reserves ||--o{ photos : reserve_id

users ||--o{ saved : user_id
reserves ||--o{ saved : reserve_id

users ||--o{ tokens : user_id
users ||--o{ audit : admin_user_id

users |o--o{ analytics : user_id
reserves |o--o{ analytics : reserve_id
@enduml